[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/PerspectiveEditor/PerspectiveEditor.gd" type="Script" id=1]

[node name="PerspectiveEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1013.0
offset_bottom = -510.0
custom_minimum_size = Vector2( 270, 10 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
self_modulate = Color( 0.698039, 0.698039, 0.698039, 0.698039 )
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -4.0
clip_contents = true
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 262.0
offset_bottom = 30.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/Header"]
offset_top = 8.0
offset_right = 232.0
offset_bottom = 22.0
size_flags_horizontal = 3
theme_type_variation = "Header"
text = "Perspective Editor"
align = 1
valign = 1

[node name="AddPoint" type="Button" parent="VBoxContainer/Header"]
offset_left = 232.0
offset_right = 262.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 30, 30 )
text = "+"
clip_text = true

[node name="TrackerLines" type="CheckButton" parent="VBoxContainer"]
offset_top = 34.0
offset_right = 262.0
offset_bottom = 74.0
pressed = true
text = "Tracker Lines"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 78.0
offset_right = 262.0
offset_bottom = 82.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
offset_top = 86.0
offset_right = 262.0
offset_bottom = 90.0

[node name="Content" type="ScrollContainer" parent="VBoxContainer"]
offset_top = 94.0
offset_right = 262.0
offset_bottom = 210.0
size_flags_vertical = 3

[node name="VanishingPointContainer" type="VBoxContainer" parent="VBoxContainer/Content"]
unique_name_in_owner = true
offset_right = 262.0
offset_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[connection signal="pressed" from="VBoxContainer/Header/AddPoint" to="." method="_on_AddPoint_pressed"]
[connection signal="toggled" from="VBoxContainer/TrackerLines" to="." method="_on_TrackerLines_toggled"]
